--- a/back/package.json
+++ b/back/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "fetch": "^1.1.0",
     "node": "^21.7.1",
