--- a/back/.env
+++ b/back/.env
@@ -1,2 +1,2 @@
-LLAMA2_URL="https://rivia-rthzn.brazilsouth.inference.ml.azure.com/score"
-LLAMA2_TOKEN="4CUdm3xRF52khe94GYJSOKZcP83z0TAf"
+LLAMA2_URL=
+LLAMA2_TOKEN=
